--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,120 +1,116 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
 :root {
-  --main-color: #eb4a4c;
+  --var-orange: #ff5d12;
+  --var-orange-escuro: #fd5000;
 }
-html {
-  overflow-x: hidden;
-  padding: 0px;
-  margin: 0px;
-}
+
 body {
-  overflow-x: hidden;
-  width: 100%;
-  font-size: 16px;
-  line-height: 1.7;
-  letter-spacing: 0.2px;
-  word-wrap: break-word;
-  font-weight: 400;
-  background-color: #000;
-  color: #a2a2a2;
+  display: grid;
+  place-items: center;
 }
 
-.edrea_tm_content {
-  position: fixed;
-  width: 900px;
-  top: 100px;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
+.nav-link {
+  color: var(--var-orange) !important;
+  transition-duration: 0.4s;
 }
 
-.edrea_tm_section {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  overflow: hidden;
-  overflow-y: scroll;
-
-  opacity: 0;
-  visibility: hidden;
-  z-index: 8;
-  transition: visibility 0.5s linear, opacity 0s linear;
-  -moz-transition: visibility 0.5s linear, opacity 0s linear;
-  -webkit-transition: visibility 0.5s linear, opacity 0s linear;
-  -o-transition: visibility 0.5s linear, opacity 0s linear;
+.nav-link:hover {
+  color: #fff !important;
 }
 
-.edrea_tm_section.animated {
-  opacity: 1;
-  visibility: visible;
-  z-index: 9;
-}
-
-.edrea_tm_section .section_inner {
-  position: relative;
-  width: 100%;
-  min-height: 100%;
+.nome {
   display: flex;
-  align-items: center;
-}
-
-.coloring {
-  color: var(--main-color);
-}
-
-.edrea_tm_home {
-  width: 100%;
-  height: auto;
-  clear: both;
-  float: left;
-  text-align: center;
-}
-
-.edrea_tm_home .job {
-  font-size: 25px;
-  font-weight: 500;
-  color: #a2a2a2;
-  margin-bottom: 40px;
-}
-.edrea_tm_home .job b {
-  color: #fff;
-  font-weight: 600;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
-  line-height: 1.3;
+  justify-content: center;
+  margin-top: 200px;
   color: #fff;
 }
-h1 {
-  font-size: 45px;
-}
-h2 {
-  font-size: 36px;
-}
-h3 {
-  font-size: 30px;
-}
-h4 {
-  font-size: 24px;
-}
-h5 {
-  font-size: 20px;
-}
-h6 {
-  font-size: 16px;
-}
 
-.edrea_tm_home .name {
-  color: #fff;
-  font-size: 72px;
+.nome h1 {
+  font-size: 65px;
   font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 20px;
+}
+
+.nome span {
+  color: var(--var-orange);
+  font-weight: 600;
+}
+
+.wrapper {
+  box-sizing: content-box;
+  height: 40px;
+  padding: 30px 10px;
+  display: flex;
+  font-size: 30px;
+  font-weight: 700;
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.2);
+}
+
+.wrapper p {
+  color: rgb(201, 201, 201);
+  font-weight: 500;
+}
+
+.words {
+  overflow: hidden;
+}
+
+.words span {
+  display: block;
+  height: 100%;
+  padding-left: 10px;
+  color: #fff;
+  animation: spin-words 6s infinite;
+}
+
+@keyframes spin-words {
+  10% {
+    transform: translateY(-112%);
+  }
+  25% {
+    transform: translateY(-100%);
+  }
+  35% {
+    transform: translateY(-212%);
+  }
+  50% {
+    transform: translateY(-200%);
+  }
+  60% {
+    transform: translateY(-312%);
+  }
+  75% {
+    transform: translateY(-300%);
+  }
+  85% {
+    transform: translateY(-412%);
+  }
+  100% {
+    transform: translateY(-400%);
+  }
+}
+
+.touch {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  color: white;
+  width: 200px;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 50px;
+  background-color: var(--var-orange);
+  transition-duration: 0.4s;
+}
+
+button:hover {
+  background-color: #fff;
+  color: black;
 }
